<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_FrameFifoEntrydatarx" Id="{444afa4b-35f5-429b-877a-b2505927b691}">
    <Declaration><![CDATA[TYPE ST_FrameFifoEntrydatarx :
STRUCT
	stRemoteAddr 	: ST_SockAddr;
	rxdata : ARRAY[0..RXDATASIZE] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>